== 1.0.8 == 
- Fixed issue 13 from the public issue list. If a content element contained xhtml, and not just text, 
  the content was not read correctly. 
- Added support for hosted domain feeds. This is done automatically, no codechanges needed for the application developer.
  The authentication code was changed to ask for Hosted domains first, then google accounts. 
- Added support for the app:control/app:draft element, but only in the way to expose a boolean on the AtomEntry. 
  The new member on AtomEntry is called IsDraft. 

== 1.0.7 ==
- Added support for published-min/published-max as standard query parameters
- Added support for codesearch. A new DLL gcodesearch.dll and a new sample for this is available.
- Added support for the WebContent calendar extension
- Added signing to the gbase.dll

== 1.0.6 == 
- Added support for sortoder, futurevents, singleevents on the calendarquery
- Added a ResponseString property on the GDataRequestException to make debugging server side errors easier
- Fixed an issue with the GoogleBaseService, if you did set the RequestFactory property twice, you would 
  create too many header entries, and hence end up with request denied responses
- Added the shipping attribute for GoogleBase
- Changed the payment attribute to payment_accepted for GoogleBase

== 1.0.5 ==
- Added batch support for GoogleFeeds, the first property to support this is the GoogleBase product
- Added a unittest for GoogleBase. This code shows update/insert/delete against base for single entries and batch entries
  refer to clients/cs/src/unittests/gbase.cs for sample code. 
- Added IComparable to atomuri.cs (based on a feature request on our issue list)
- GDataAuthRequestFactory is now a subclass of GDataRequestFactory
- Moved GCookies from GDataAuthRequestFactory to GDataRequestFactory and renamed it to Cookies
- removed the debug binaries from the lib directory
- added a GoogleBase sample application in VB ! 